--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "uuid": "4de531d8-297c-496a-a40e-9812256256e1"
   },
   "engines": {
-    "node": ">=18.0.0 <=20.x.x",
-    "npm": ">=6.0.0"
-  },
+      "node": ">=18.0.0 <=20.x.x",
+      "npm": ">=6.0.0 <=9.x.x"
+    }
+  ,
   "license": "MIT"
 }
